--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     - The freeCodeCamp Team
 
-    -->
+    --><p>Hello World </p>
     <script  src="js/index.js"></script>
   </body>
 </html>
