--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
     - The freeCodeCamp Team
 
     --><p>Hello World </p>
+    <h1 id = "title"> title</h1>
+    <p id="description">sample para</p>
+    <form id ="survey-form">
+      <input type = "text" id ="name" required ="true" >
+      <input type = "email" id ="email" required ="true" >
+      <input type = "number" id ="number" required ="true" >
+    </form>
+
     <script  src="js/index.js"></script>
   </body>
-</html>
+</html
