--- a/index.html
+++ b/index.html
@@ -9,25 +9,45 @@
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
-    <!--
+ 
+    <main id = "main-doc">
+      <section class="main-section" id="sample_text_tt_y">
+        <header>sample text tt y</header>
+        <p>tesre</p>
+        <p>tesr</p>
+        <p>tesre</p>
+        <p>tesr</p>
+        <p>tesr</p>
 
-    Hello Camper!
+      </section>
+      <section class="main-section" id="sample_text_tt">
+        <header> sample text tt</header>
+        <p>test</p>
+        <p>tesre</p>
+        <p>tesr</p>
+        <p>tesre</p>
+        <p>tesr</p>
 
-    For now, the test suite only works in Chrome!
-    Please read the README below in the JS Editor before beginning.
-    Feel free to delete this message once you have read it.
-    Good luck and Happy Coding!
+      </section>
+      <section class="main-section" id="sample_text_2_tt">
+        <header>sample text 2 tt</header>
 
-    - The freeCodeCamp Team
+      </section>
+      <section class="main-section" id="sample_text_3_tt">
+        <header>sample text 3 tt</header>
 
-    --><p>Hello World </p>
-    <h1 id = "title"> title</h1>
-    <p id="description">sample para</p>
-    <form id ="survey-form">
-      <input type = "text" id ="name" required ="true" >
-      <input type = "email" id ="email" required ="true" >
-      <input type = "number" id ="number" required ="true" >
-    </form>
+      </section>
+      <section class="main-section" id="sample_text_4_tt">
+        <header>sample text 4 tt</header>
+
+      </section>
+      <section class="main-section" id="sample_text_5_tt">
+        <header>sample text 5 tt</header>
+
+      </section>
+
+    </main>
+    
 
     <script  src="js/index.js"></script>
   </body>
